The 7th: Normalize api response & catch Exception.